new about/contact page. new 3 grid themes layout

--- a/about.html
+++ b/about.html
@@ -6,56 +6,41 @@ layout: default
    <div class="section-parent">
       <div class="wrapper">
          <section>
-            <div class="manifest">
-               <h1>Vårt manifest är grunden</h1>
-               <ul>
-                  <li>Sätta <strong>lärande</strong> framför testande</li>
-                  <li>Sätta <strong>inlärning</strong> framför utlärning</li>
-                  <li>Sätta <strong>digital funktionalitet</strong> framför digital form</li>
-                  <li>Sätta <strong>formativ process</strong> framför summativ utvärdering</li>
-                  <li>Sätta <strong>djup och förståelse</strong> framför det heltäckande men ytliga</li>
-               </ul>
-               <p>
-                  Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande
-               </p>
-            </div>
+            <h1>Vårt manifest är grunden</h1>
+            <ul class="manifest">
+               <li ><p>Vi sätter <strong>lärande</strong> framför testande</p></li>
+               <li ><p>Vi sätter <strong>inlärning</strong> framför utlärning</p></li>
+               <li ><p>Vi sätter <strong>digital funktionalitet</strong> framför digital form</p></li>
+               <li ><p>Vi sätter <strong>formativ process</strong> framför summativ utvärdering</p></li>
+               <li ><p>Vi sätter <strong>djup och förståelse</strong> framför det heltäckande men ytliga</p></li>
+            </ul>
+            <p>Den Nya generationens digitala läromedel är adaptiva och inklusiva och erbjuder stöd och utmaning till varje individ utan att vara utpekande</p>
          </section>
       </div>
    </div>
 
-   <div class="section-parent">
-      <div class="wrapper">
-         <section id="bild">
-            <div class="about-media">
-               <div class="img"><div class=""></div></div>
-            </div>
-         </section>
-      </div>
+   <div class="wrapper">
+      <img class="contact-img" src="/assets/img/etg_group_bild_2.png" ><div class="overlay"></div></img>
    </div>
 
    <div class="section-parent">
       <div class="wrapper">
          <section id="forskargruppen">
-            <div class="about-media">
-               <div class="infoforsk">
-                  <div class="content">
-                     <h3>Vi är en tvärvetenskaplig forskargrupp</h3>
-                     <p>
-                        Educational Technology Group består av forskare vid Linköpings och Lunds universitet. Vi är bland de starkaste kritikerna och starkaste entusiasterna för digitalisering av skolan! Och <strong>vårt syfte är att</strong>
-                        <ul>
-                           <li>ge en knuff åt svenska skolan för elevers och lärares skull</li>
-                           <li>visa vilka mervärden man kan uppnå med digitala läromedel när man utnyttjar dess fulla potential</li>
-                           <li>visa på skillnaderna mellan vad man kan göra med digitalisering och vad som faktiskt finns och används idag</li>
-                           <li>höja ribban för alla de som utvecklar och producerar digitala läromedel och pedagogisk programvara.</li>
-                        </ul>
-                     </p>
-                     <p>
-                        Vi vill vara upplysande/bildande, lättillgängliga och inspirerande!
-                     </p>
-                  </div>
-                  <a href="#"><div> Länk till vår hemsida</div></a>
-               </div>
-            </div>
+            <h1>Vi är en tvärvetenskaplig forskargrupp</h1>
+            <p>
+               Educational Technology Group består av forskare vid Linköpings och Lunds universitet. Vi är bland de starkaste kritikerna och starkaste entusiasterna för digitalisering av skolan!
+               Och <strong>vårt syfte är att:</strong>
+            </p>
+            <ul>
+               <li><p>Ge en knuff åt svenska skolan för elevers och lärares skull</p></li>
+               <li><p>Visa vilka mervärden man kan uppnå med digitala läromedel när man utnyttjar dess fulla potential</p></li>
+               <li><p>Visa på skillnaderna mellan vad man kan göra med digitalisering och vad som faktiskt finns och används idag</p></li>
+               <li><p>Höja ribban för alla de som utvecklar och producerar digitala läromedel och pedagogisk programvara</p></li>
+            </ul>
+            <p>
+               Vi vill vara upplysande/bildande, lättillgängliga och inspirerande!
+               Besök gärna <a href="http://www.lucs.lu.se/educational-technology/"> förskargruppens hemsida.</a>
+            </p>
          </section>
       </div>
    </div>
@@ -70,18 +55,19 @@ layout: default
             <p>
                Du är alltid välkommen att kontakta oss vid olika funderingar och frågor. Det kan <strong>exempelvis</strong> handla om nedanstående:
                <ul>
-                  <li> Om du är <strong>beslutsfattare eller lärare</strong> och vill veta mer om våra rekomendationer</li>
-                  <li> Om du är <strong>studerande</strong> och vill veta mer om våra forskarprojekt</li>
-                  <li> Om du är <strong>journalist</strong> och vill ställa frågor kring nya generationens digitala läromedel</li>
-                  <li> Om du har ett intresse av att <strong>boka in oss</strong> som föreläsare eller talare vid exmepelvis mässor</li>
+                  <li><p> Om du är <strong>beslutsfattare eller lärare</strong> och vill veta mer om våra rekomendationer</p></li>
+                  <li><p> Om du är <strong>studerande</strong> och vill veta mer om våra forskarprojekt</p></li>
+                  <li><p> Om du är <strong>journalist</strong> och vill ställa frågor kring nya generationens digitala läromedel</p></li>
+                  <li><p> Om du har ett intresse av att <strong>boka in oss</strong> som föreläsare eller talare vid exmepelvis mässor</p></li>
                </ul>
             </p>
             <p>
                Även andra funderingar eller frågor som du undrar över är varmt välkommet att ställa. Kontaktar oss gör du på E-post till
-               <span class="contact-email">kontakt@edutech.se</span>
-            </p>
-            <p>Med vänliga hälsningar Educational Technology Group</p>
-         </section>
+               <!-- <span class="contact-email">kontakt@edutech.se</span> -->
+               <A HREF="mailto:kontakt@edutech.se">kontakt@edutech.se</A>
+               </p>
+               <p>Med vänliga hälsningar Educational Technology Group</p>
+            </section>
+         </div>
       </div>
    </div>
-</div>
