--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ title: Start
                         <li ><p>Vi sätter <strong>formativ process</strong> framför summativ utvärdering</p></li>
                         <li ><p>Vi sätter <strong>djup och förståelse</strong> framför det heltäckande men ytliga</p></li>
                      </ul>
-                     <p class="p-tablet">
+                     <!-- <p class="p-tablet">
                         Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro. Obcaecati excepturi fuga suscipit temporibus sit distinctio maiores, deserunt maxime. Porro.
-                     </p>
+                     </p> -->
                   </div>
                   <a href="/about"><div> Läs mer om forskargruppen</div></a>
                </div>
@@ -67,7 +67,7 @@ title: Start
                   <p class="p-tablet">
                      Vill du veta mer om den nya generationens digitala läromedel? Gå in och lyssna på våra olika teman som bland annat behandlar denna fråga.
                   </p>
-                  <a href="/themes"><div>Gå vidare och titta på våra teman</div></a>
+                  <a href="/themes"><div>Ta del av våra teman</div></a>
                </div>
             </div>
          </section>
@@ -86,7 +86,7 @@ title: Start
                      </p>
 
                   </div>
-                  <a href="/articles"><div> Gå vidare till artiklar</div></a>
+                  <a href="/articles"><div>Vetenskapliga artiklar</div></a>
                </div>
                <div class="img "><div class=""></div></div>
             </div>
@@ -106,7 +106,7 @@ title: Start
                   <p class="p-tablet">
                      Gå vidare till våra nyheter så kan du läsa mer om vårt arbete eller var vi kommer att synas härnäst.
                   </p>
-                  <a href="/posts"><div>Läs mer om de senaste nyheterna</div></a>
+                  <a href="/posts"><div>Det senaste från ETG</div></a>
                </div>
             </div>
          </section>
