--- a/recommendations.html
+++ b/recommendations.html
@@ -8,7 +8,7 @@ title: Rekomenderade Digitala Läromedel
       <section >
          <h1>En ny generation digitala läromedel</h1>
          <p>
-            Det finns <a class="link" href="">många</a> läromedel tillgängliga idag och det kan vara svårt att välja rätt digitala läromedel till undervisningen. Våra rekommenderade digitala läromedel är roliga och pedagogiska. Nedan kan du se, läsa och testa på olika digitala läromedel. 
+            Det finns <a class="link" href="">många</a> läromedel tillgängliga idag och det kan vara svårt att välja rätt digitala läromedel till undervisningen. Våra rekommenderade digitala läromedel är roliga och pedagogiska. Nedan kan du se, läsa och testa på olika digitala läromedel.
          </p>
       </section>
    </div>
@@ -62,7 +62,7 @@ title: Rekomenderade Digitala Läromedel
                <p class="theme-media-intro">
                   {{ t.short }}
                </p>
-               <a class="media-box-button" href="{{ t.url }}"><div>Läs mer om {{t.title}}</div></a>
+               <a class="media-box-button" href="{{ t.url }}"><div>Mer om {{t.title}}  <i class="fa fa-play"></i></div></a>
             </div>
          </div>
          {% endfor %}
