--- a/themes.html
+++ b/themes.html
@@ -27,9 +27,9 @@ layout: default
             <div class="info">
                <h3><span>Tema {{ forloop.index }} <br> </span> {{ t.title }} </h3>
                <p class="theme-media-intro">
-                  {{ t.short }}
+                  {{ t.short }} asdasdasd asdads asdad aside asdadsadas vxcvdfsdfsdffd
                </p>
-               <a href="{{ t.url }}"><div>Gå till materialet</div></a>
+               <a href="{{ t.url }}"><div><p>Tema {{ forloop.index }} <i class="fa fa-play"></i></p></div></a>
             </div>
          </div>
          {% endfor %}
